# rules_foreign_cc_example

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE
